Change 'i' in VM image to Uppercase in adminweb's menu.

--- a/api-runtime/rest-runtime/admin-web/html/main.html
+++ b/api-runtime/rest-runtime/admin-web/html/main.html
@@ -303,7 +303,7 @@
                     <img id="price-img" src="/spider/adminweb/images/top-menu/price.png" alt="Price Icon">Price
                 </a>
                 <a href="/spider/adminweb/vmimage/${configName}" target="body_frame" class="menu-item" id="vm-image-menu" onclick="selectMainMenu('vm-image')">
-                    <img id="vm-image-img" src="/spider/adminweb/images/top-menu/vm-image.png" alt="VM Image Icon">VM image
+                    <img id="vm-image-img" src="/spider/adminweb/images/top-menu/vm-image.png" alt="VM Image Icon">VM Image
                 </a>
                 <a href="/spider/adminweb/vmspec/${configName}" target="body_frame" class="menu-item" id="vm-specs-menu" onclick="selectMainMenu('vm-specs')">
                     <img id="vm-specs-img" src="/spider/adminweb/images/top-menu/vm-specs.png" alt="VM Specs Icon">VM Specs
