Check and patch VM Image Info validation for all drivers

--- a/api-runtime/rest-runtime/admin-web/html/vm-image.html
+++ b/api-runtime/rest-runtime/admin-web/html/vm-image.html
@@ -169,7 +169,7 @@
         <td class="column-osdistribution">{{$image.OSDistribution}}</td>
         <td class="column-osplatform">{{$image.OSPlatform}}</td>
         <td class="column-osarchitecture">{{$image.OSArchitecture}}</td>
-        <td class="column-osdisksize">{{$image.OSDiskSizeInGB}}</td>
+        <td class="column-osdisksize">{{$image.OSDiskSizeGB}}</td>
         <td class="column-osdisktype">{{$image.OSDiskType}}</td>
         <td class="column-Misc">
             {{range $kv := $image.KeyValueList}}
