--- a/api-runtime/rest-runtime/admin-web/html/keypair.html
+++ b/api-runtime/rest-runtime/admin-web/html/keypair.html
@@ -543,7 +543,7 @@
                 ConnectionName: connConfig
             };
 
-            return fetchWithProgress(`/spider/keypair/${keyPairName}?force=true`, {
+            return fetchWithProgress(`/spider/keypair/${keyPairName}`, {
                 method: 'DELETE',
                 headers: {
                     'Content-Type': 'application/json'
@@ -577,7 +577,7 @@
             ConnectionName: connConfig
         };
 
-        fetchWithProgress(`/spider/keypair/${keyPairName}?force=true`, {
+        fetchWithProgress(`/spider/keypair/${keyPairName}`, {
             method: 'DELETE',
             headers: {
                 'Content-Type': 'application/json'
