--- a/api-runtime/rest-runtime/admin-web/html/myimage.html
+++ b/api-runtime/rest-runtime/admin-web/html/myimage.html
@@ -591,7 +591,7 @@
                 ConnectionName: connConfig
             };
 
-            return fetchWithProgress(`/spider/myimage/${myImageName}?force=true`, {
+            return fetchWithProgress(`/spider/myimage/${myImageName}`, {
                 method: 'DELETE',
                 headers: {
                     'Content-Type': 'application/json'
