--- a/api-runtime/rest-runtime/admin-web/html/disk.html
+++ b/api-runtime/rest-runtime/admin-web/html/disk.html
@@ -738,7 +738,7 @@
                 ConnectionName: connConfig
             };
 
-            return fetchWithProgress(`/spider/disk/${diskName}?force=true`, {
+            return fetchWithProgress(`/spider/disk/${diskName}`, {
                 method: 'DELETE',
                 headers: {
                     'Content-Type': 'application/json'
