Replace information with statistics in SysStats Title

--- a/api-runtime/rest-runtime/admin-web/html/system-stats.html
+++ b/api-runtime/rest-runtime/admin-web/html/system-stats.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>System Information Dashboard</title>
+<title>System Statistics Dashboard</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -333,7 +333,7 @@
     <div class="fixed-header">
         <div class="header-container">
             <img src="/spider/adminweb/images/logo.png" alt="System Info Icon">
-            <h1>System Information Dashboard</h1>
+            <h1>System Statistics Dashboard</h1>
         </div>        
         <div class="fixed-action-buttons">
             <span class="time-info">Spider Start Time: {{.ShortStartTime}}</span>
